add database schema and gorm integration
